fixed gap on users page

--- a/src/styles/pages/user-page.css
+++ b/src/styles/pages/user-page.css
@@ -3,6 +3,7 @@
     margin-top: 100px;
     margin-bottom: 140px;
     display: flex;
+    gap: 20px;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
